--- a/SECB/app/src/main/res/layout-ar/event_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_item_card.xml
@@ -180,7 +180,40 @@
         android:layout_width="@dimen/evet_card_img_size"
         android:layout_height="@dimen/evet_card_img_size"
         android:layout_marginLeft="@dimen/event_card_margin"
-
-        android:src="@drawable/events_image_place_holder"/>
+        android:src="@drawable/event_card_img"
+        android:visibility="gone"/>
+    <LinearLayout
+        android:layout_width="@dimen/evet_card_img_size"
+        android:layout_height="@dimen/evet_card_img_size"
+        android:background="@drawable/event_card_img"
+        android:layout_marginLeft="@dimen/event_card_margin"
+        android:orientation="vertical"
+        android:paddingTop="@dimen/event_card_margin"
+        android:paddingBottom="@dimen/event_card_margin"
+        android:layout_centerInParent="true">
+        <TextView
+            android:id="@+id/txtv_eventImgDate_day"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="13"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center"
+            android:textColor="@color/secb_orange"
+            android:textSize="@dimen/eventImgDate_day_text_size"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:id="@+id/txtv_eventImgDate_month"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="OCT"
+            android:gravity="center_horizontal|top"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/eventImgDate_month_text_size"
+            />
+    </LinearLayout>
 
 </TableRow>
