--- a/SECB/app/src/main/res/layout/home_fragment.xml
+++ b/SECB/app/src/main/res/layout/home_fragment.xml
@@ -43,13 +43,15 @@
             android:orientation="vertical">
 
             <!--Title:services requests-->
+            <!--@dimen/home_event_card_height-->
             <include
                 android:id="@+id/event_card_container"
                 layout="@layout/event_item_card"
                 android:layout_width="match_parent"
+                android:layout_height="@dimen/item_card_height"
                 android:layout_marginLeft="@dimen/event_card_margin"
-                android:layout_marginRight="@dimen/event_card_margin"
-                android:layout_height="wrap_content"/> <!--@dimen/home_event_card_height-->
+                android:layout_marginRight="@dimen/event_card_margin"/>
+
         </LinearLayout>
 
 
