--- a/SECB/app/src/main/res/values-hdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-hdpi/dimens.xml
@@ -50,6 +50,8 @@
     <dimen name="event_card_h3_text_size">9dp</dimen> <!-- 22PX - HEIGHT -->
     <dimen name="home_event_card_height">80dp</dimen> <!-- 200PX - HEIGHT -->
     <dimen name="evet_card_img_size">70dp</dimen> <!-- 175PX - HEIGHT -->
+    <dimen name="eventImgDate_day_text_size">20dp</dimen> <!-- 50PX - HEIGHT -->
+    <dimen name="eventImgDate_month_text_size">10dp</dimen> <!-- 25PX - HEIGHT -->
 
     <dimen name="home_news_recycler_height">123dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">10dp</dimen> <!-- 25PX - HEIGHT -->
