--- a/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
@@ -249,7 +249,8 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
+                    android:textSize="@dimen/news_filter_text_size"
+                    android:inputType="number"/>
                 <!--location name-->
                 <TextView
                     android:id="@+id/txtv_location_filter_capacity_from_title"
@@ -283,7 +284,8 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
+                    android:textSize="@dimen/news_filter_text_size"
+                    android:inputType="number"/>
                 <!--to-->
                 <TextView
                     android:id="@+id/txtv_location_filter_capacity_to_title"
