--- a/SECB/app/src/main/res/layout/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout/locations_filter_screen.xml
@@ -242,7 +242,8 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
+                    android:textSize="@dimen/news_filter_text_size"
+                    android:inputType="number"/>
             </TableRow>
 
             <View
@@ -277,7 +278,8 @@
                     android:maxLines="1"
                     android:text=""
                     android:textColor="@color/secb_grey_text"
-                    android:textSize="@dimen/news_filter_text_size"/>
+                    android:textSize="@dimen/news_filter_text_size"
+                    android:inputType="number"/>
             </TableRow>
 
 
