Done : -Display rooms vertically  -Fix Map issue in contact us

--- a/SECB/app/src/main/res/layout/location_room_info.xml
+++ b/SECB/app/src/main/res/layout/location_room_info.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical">
 
     <LinearLayout
+
+        android:layout_marginTop="@dimen/organizer_details_margin_small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -82,6 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/organizer_details_margin_small"
+        android:layout_marginBottom="@dimen/organizer_details_margin_small"
         android:orientation="horizontal">
 
         <TableRow
