--- a/SECB/app/src/main/res/layout-ar/location_room_info.xml
+++ b/SECB/app/src/main/res/layout-ar/location_room_info.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical">
 
     <LinearLayout
+
+        android:layout_marginTop="@dimen/organizer_details_margin_small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -76,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/organizer_details_margin_small"
+        android:layout_marginBottom="@dimen/organizer_details_margin_small"
         android:orientation="horizontal">
 
 
