--- a/SECB/app/src/main/res/layout/location_details.xml
+++ b/SECB/app/src/main/res/layout/location_details.xml
@@ -30,7 +30,7 @@
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/eguide_base_padding"
-            android:visibility="gone"
+            android:visibility="visible"
             android:weightSum="3.5">
 
             <RelativeLayout
@@ -50,23 +50,26 @@
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
                     android:src="@drawable/news_img_sample"/>
+
                 <ImageButton
                     android:id="@+id/btn_nextRoom"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
-                    android:background="@drawable/arrow_to_right"
                     android:layout_height="wrap_content"
-                    android:paddingRight="@dimen/organizer_details_margin"/>
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/arrow_to_right"
+                    android:paddingRight="@dimen/organizer_details_margin"
+                    android:visibility="gone"/>
+
                 <ImageButton
                     android:id="@+id/btn_previousRoom"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_width="wrap_content"
-                    android:background="@drawable/arrow_to_left_disabled"
                     android:layout_height="wrap_content"
-                    android:paddingRight="@dimen/organizer_details_margin"/>
-
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/arrow_to_left_disabled"
+                    android:paddingRight="@dimen/organizer_details_margin"
+                    android:visibility="gone"/>
 
 
             </RelativeLayout>
@@ -98,6 +101,7 @@
                     android:textSize="@dimen/event_card_h3_text_size"/>
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -119,15 +123,18 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_rooms_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/organizer_details_margin_small"
                 android:layout_marginTop="@dimen/organizer_details_margin_small"
                 android:background="@color/off_white"
                 android:paddingLeft="@dimen/organizer_details_margin"
-                android:paddingRight="@dimen/organizer_details_margin">
+                android:paddingRight="@dimen/organizer_details_margin"
+                android:orientation="vertical">
 
                 <include
-                    android:id="@+id/location_capacity_info"
+                    android:id="@+id/location_room_item"
                     layout="@layout/location_room_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -141,7 +148,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/organizer_details_margin_small"
+
                 android:layout_weight="1.0"
                 android:background="@color/off_white">
 
