done: 1-location details rooms separator . 2-Event Image Date : bold day , UpperCase Month 3-Event Card : format item date time to time only 4-Graphs : bold value , reduced line space. 5-News Card: item date time to xxx period ago (in English only)

--- a/SECB/app/src/main/res/layout-ar/event_details_header_card.xml
+++ b/SECB/app/src/main/res/layout-ar/event_details_header_card.xml
@@ -1,73 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/event_details_header_card_height"
-    android:orientation="horizontal"
-    android:paddingTop="@dimen/event_card_margin"
-    android:paddingBottom="@dimen/event_card_margin"
+          android:layout_width="match_parent"
+          android:layout_height="@dimen/event_details_header_card_height"
+          android:layout_marginRight="@dimen/event_card_margin"
           android:gravity="right"
-    android:layout_marginRight="@dimen/event_card_margin"
-    android:weightSum="3"
+          android:orientation="horizontal"
+          android:paddingBottom="@dimen/event_card_margin"
+          android:paddingTop="@dimen/event_card_margin"
+          android:weightSum="3"
     >
+
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="@dimen/event_card_margin">
+        android:layout_marginLeft="@dimen/event_card_margin"
+        android:layout_weight="2"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtv_eventTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:gravity="center_vertical"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/event_details_text_size"
-            android:gravity="center_vertical"
-            android:layout_gravity="right"
             />
 
     </LinearLayout>
 
 
-
     <ImageView
         android:id="@+id/imgv_eventImg"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/event_card_margin"
+        android:layout_weight="1"
         android:src="@drawable/events_image_place_holder"
         android:visibility="gone"/>
+
     <LinearLayout
         android:layout_width="@dimen/evet_card_img_size"
         android:layout_height="@dimen/evet_card_img_size"
-        android:background="@drawable/event_card_img"
         android:layout_marginLeft="@dimen/event_card_margin"
-        android:paddingTop="@dimen/event_card_margin"
-        android:paddingBottom="@dimen/event_card_margin"
-        android:orientation="vertical"
+        android:background="@color/secb_dark_text"
+        android:gravity="center"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
 
-        android:layout_centerInParent="true">
         <TextView
             android:id="@+id/txtv_eventImgDate_day"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:text="13"
-            android:gravity="center_horizontal|bottom"
-            android:layout_gravity="center"
             android:textColor="@color/secb_orange"
             android:textSize="@dimen/eventImgDate_day_text_size"
             android:textStyle="bold"
             />
+
         <TextView
             android:id="@+id/txtv_eventImgDate_month"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="OCT"
-            android:gravity="center_horizontal|top"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:text="OCT"
             android:textColor="@color/white"
             android:textSize="@dimen/eventImgDate_month_text_size"
             />
