--- a/SECB/app/src/main/res/layout/location_details.xml
+++ b/SECB/app/src/main/res/layout/location_details.xml
@@ -30,7 +30,7 @@
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/eguide_base_padding"
-            android:visibility="visible"
+            android:visibility="gone"
             android:weightSum="3.5">
 
             <RelativeLayout
